# mcp-file-search-server

./: .gitignore  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  fastmcp_file_search.py  fastmcp_server.py  file_search_ui.py  logging_config.py  mcp_config.json  models.py  pyproject.toml  search_functions.py  utils.py
